--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Great Britain -- Court and courtiers -- History -- 16th century'
 - !lcc 'DA'
 - !lcsh 'Great Britain -- History -- Elizabeth, 1558-1603'
+- GITenberg
 title: Memoirs of the Court of Queen Elizabeth
 url: http://www.gutenberg.org/ebooks/21500
